demo/thrift/virtualservice-v1.yaml
# Copyright Aeraki Authors <cncf-aerakimesh-maintainers@lists.cncf.io>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-thrift-route
spec:
  hosts:
    - thrift-sample-server.thrift.svc.cluster.local
  http:
    - name: "thrift-v1-routes"
      route:
        - destination:
            host: thrift-sample-server.thrift.svc.cluster.local
            subset: v1
